<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screens"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MidScreenActivity" >

    <TextView
        android:id="@+id/textview_mid_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rbg_mid_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbyes_mid_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/rButton_yes" />

        <RadioButton
            android:id="@+id/rbno_mid_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rButton_no" />

        <RadioButton
            android:id="@+id/rbnotcertain_mid_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rButton_notcertain" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rbg_mid_screen"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="41dp"
        android:onClick="sendMessageBack"
        android:text="@string/prev" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:onClick="sendMessage"
        android:text="@string/button_next" />

</RelativeLayout>