<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screens"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NextScreenActivity" >

    <RadioGroup
        android:id="@+id/rbg_next_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textview_next_screen"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbyes_next_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/rButton_yes" />

        <RadioButton
            android:id="@+id/rbno_next_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rButton_no" />

        <RadioButton
            android:id="@+id/rbnotcertain_next_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rButton_notcertain" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="56dp"
        android:onClick="sendMessage"
        android:text="@string/button_next" />

    <TextView
        android:id="@+id/textview_next_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rbg_next_screen"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/question_1"
        android:textSize="20sp" />

</RelativeLayout>